Hopefully fixed navbar on mobile - still need to make a hamburger menu

--- a/src/sass/_css_human/style.css
+++ b/src/sass/_css_human/style.css
@@ -131,15 +131,16 @@ p {
 
 #nav_links {
   display: flex;
-  flex: 1 1 auto;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: left;
   padding-top: 1em;
   padding-bottom: 1em;
   background: #1e64aa; }
 
-#nav_leftbuffer {
-  width: 5%; }
+#nav_container {
+  padding-left: 5%;
+  padding-right: 5%; }
 
 @-webkit-keyframes nav_link_focus {
   0% { }
@@ -157,6 +158,7 @@ p {
 
 #header .nav_link {
   position: relative;
+  display: inline-block;
   flex-shrink: 0;
   width: -webkit-max-content;
   width: -moz-max-content;
@@ -167,7 +169,7 @@ p {
   margin-right: 1em;
   padding: 0.25em;
   color: #ebebeb;
-  font-size: clamp(0.5em, 2vw, 150%);
+  font-size: 150%;
   text-align: center;
   text-decoration: none;
   border-radius: 5px;
